lang/interpret_test/TestAstFunc2/fortytwoerror.txtar
-- main.mcl --
import "fmt"
import "math"

# This should fail since it can't be polymorphic!
$myfortytwo = func() {
	math.fortytwo()
}

$a = $myfortytwo() + 4
$b = $myfortytwo() + 3.0

test ["x",] {
	int8 => $a,
	float32 => $b,
}
-- OUTPUT --
# err: errUnify: type unification error here: in /main.mcl @10:6-10:22
--
$b = $myfortytwo() + 3.0
     ^^^^^^^^^^^^^^^^^

ERROR: type error: int != float
